@@ -1,12 +1,17 @@
 package com.back2basics.adapter.persistence.answer.adapter;
 
+import static com.back2basics.adapter.persistence.answer.QAnswerEntity.answerEntity;
+import static com.back2basics.adapter.persistence.question.QQuestionEntity.questionEntity;
+import static com.back2basics.adapter.persistence.user.entity.QUserEntity.userEntity;
+
+import com.back2basics.adapter.persistence.answer.AnswerEntity;
 import com.back2basics.adapter.persistence.answer.AnswerEntityRepository;
 import com.back2basics.adapter.persistence.answer.AnswerMapper;
 import com.back2basics.answer.model.Answer;
 import com.back2basics.answer.port.out.AnswerReadPort;
+import com.querydsl.jpa.impl.JPAQueryFactory;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -14,18 +19,33 @@ import org.springframework.stereotype.Component;
 @RequiredArgsConstructor
 public class AnswerReadJpaAdapter implements AnswerReadPort {
 
+    private final JPAQueryFactory queryFactory;
     private final AnswerEntityRepository answerRepository;
     private final AnswerMapper mapper;
 
     @Override
     public Optional<Answer> findById(Long id) {
-        return answerRepository.findById(id).map(mapper::toDomain);
+        AnswerEntity entity = queryFactory
+            .selectFrom(answerEntity)
+            .join(answerEntity.author, userEntity).fetchJoin()
+            .join(answerEntity.question, questionEntity).fetchJoin()
+            .where(answerEntity.id.eq(id))
+            .fetchOne();
+
+        return Optional.ofNullable(entity).map(mapper::toDomain);
     }
 
     @Override
     public List<Answer> findAllAnswersByQuestionId(Long questionId) {
-        return answerRepository.findAllAnswersByQuestionId(questionId).stream()
+        List<AnswerEntity> entities = queryFactory
+            .selectFrom(answerEntity)
+            .join(answerEntity.author, userEntity).fetchJoin()
+            .join(answerEntity.question, questionEntity).fetchJoin()
+            .where(answerEntity.question.id.eq(questionId))
+            .fetch();
+
+        return entities.stream()
             .map(mapper::toDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
